created training and testin data

--- a/node_classification/classify_node.ipynb
+++ b/node_classification/classify_node.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "fbf4a040-67f8-421b-aef3-2ccbac7f1946",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1af08b4c-d203-4aa3-be20-2271b06d8827",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "944f1ccb-69db-4c2f-a5a2-9361c5637d39",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "00a0f9af-524d-4370-bce7-f8c6855152dd",
    "metadata": {},
    "outputs": [
@@ -122,8 +122,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.21 s, sys: 200 ms, total: 1.41 s\n",
-      "Wall time: 8.84 s\n"
+      "CPU times: user 1.21 s, sys: 84.3 ms, total: 1.29 s\n",
+      "Wall time: 10 s\n"
      ]
     },
     {
@@ -132,7 +132,7 @@
        "(646, 8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,14 +147,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03ab01b5-f9c9-40b1-8ec3-395a753f501a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "3a7886d3-e135-495e-a96a-aa141cf51fae",
    "metadata": {},
@@ -164,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9c6e106a-ba56-4659-a188-772306d5c078",
    "metadata": {},
    "outputs": [],
@@ -205,17 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c09d5544-3b6e-42ab-9f47-4e2dcf096bdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_tp = research_df.explode('all_topics').copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7e739a71-2a1e-4dfd-aae1-620410bfca01",
    "metadata": {},
    "outputs": [
@@ -223,23 +205,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 400 ms, sys: 38.6 ms, total: 439 ms\n",
-      "Wall time: 588 ms\n"
+      "CPU times: user 321 ms, sys: 7.12 ms, total: 328 ms\n",
+      "Wall time: 336 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "tp_nx = generate_network(\n",
-    "    all_tp, \n",
+    "    research_df, \n",
     "    node_col = 'article_id', \n",
-    "    edge_col = 'all_topics'\n",
+    "    edge_col = 'main_topic'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "77bb39fb-b179-4108-8993-084b4156caba",
    "metadata": {},
    "outputs": [
@@ -250,8 +232,8 @@
       "Name: \n",
       "Type: Graph\n",
       "Number of nodes: 554\n",
-      "Number of edges: 27745\n",
-      "Average degree: 100.1625\n"
+      "Number of edges: 11689\n",
+      "Average degree:  42.1986\n"
      ]
     }
    ],
@@ -269,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "23802c9a-b3a4-435b-b53d-4a01b88ac758",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5569d21f06c343f396a312e916257276",
+       "model_id": "8ec14b75291b48dca7f0b7f9355675c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,15 +273,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating walks (CPU: 1): 100%|██████████| 10/10 [00:13<00:00,  1.33s/it]"
+      "Generating walks (CPU: 1): 100%|██████████| 10/10 [00:09<00:00,  1.05it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 33.1 s, sys: 485 ms, total: 33.6 s\n",
-      "Wall time: 34.5 s\n"
+      "CPU times: user 13.7 s, sys: 107 ms, total: 13.8 s\n",
+      "Wall time: 13.8 s\n"
      ]
     },
     {
@@ -316,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "3aff2d00-67dc-4a1b-9d09-b970f82088a9",
    "metadata": {},
    "outputs": [],
@@ -328,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "38b5b5f3-4b58-4e42-b2ad-67e25b99364d",
    "metadata": {},
    "outputs": [],
@@ -342,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "06e2f2af-0938-4378-9304-c620faac9012",
    "metadata": {},
    "outputs": [],
@@ -357,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "63a54708-bc49-4079-9683-fab39fa704a2",
    "metadata": {},
    "outputs": [
@@ -403,98 +385,98 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.207463</td>\n",
-       "      <td>0.062599</td>\n",
-       "      <td>0.316774</td>\n",
-       "      <td>0.759136</td>\n",
-       "      <td>0.531327</td>\n",
-       "      <td>0.218926</td>\n",
-       "      <td>1.292739</td>\n",
-       "      <td>0.829721</td>\n",
-       "      <td>0.227742</td>\n",
-       "      <td>0.811851</td>\n",
-       "      <td>0.184792</td>\n",
-       "      <td>-0.461864</td>\n",
-       "      <td>-0.256434</td>\n",
-       "      <td>-0.607792</td>\n",
-       "      <td>-0.297039</td>\n",
-       "      <td>0.720587</td>\n",
+       "      <td>-0.838726</td>\n",
+       "      <td>-0.235961</td>\n",
+       "      <td>0.678999</td>\n",
+       "      <td>0.272436</td>\n",
+       "      <td>1.040902</td>\n",
+       "      <td>0.545415</td>\n",
+       "      <td>-0.076529</td>\n",
+       "      <td>-0.823694</td>\n",
+       "      <td>-0.180377</td>\n",
+       "      <td>-0.419546</td>\n",
+       "      <td>-0.378560</td>\n",
+       "      <td>-1.136071</td>\n",
+       "      <td>0.917937</td>\n",
+       "      <td>0.525844</td>\n",
+       "      <td>-0.399737</td>\n",
+       "      <td>0.757854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.183530</td>\n",
-       "      <td>-0.303806</td>\n",
-       "      <td>-0.191326</td>\n",
-       "      <td>0.695051</td>\n",
-       "      <td>0.004614</td>\n",
-       "      <td>0.516913</td>\n",
-       "      <td>1.419496</td>\n",
-       "      <td>0.712160</td>\n",
-       "      <td>-0.516897</td>\n",
-       "      <td>-0.066074</td>\n",
-       "      <td>-0.123888</td>\n",
-       "      <td>-0.263573</td>\n",
-       "      <td>0.205573</td>\n",
-       "      <td>-0.329295</td>\n",
-       "      <td>-0.679910</td>\n",
-       "      <td>0.548596</td>\n",
+       "      <td>-0.854508</td>\n",
+       "      <td>-0.151853</td>\n",
+       "      <td>0.553616</td>\n",
+       "      <td>0.195111</td>\n",
+       "      <td>1.057672</td>\n",
+       "      <td>0.700733</td>\n",
+       "      <td>-0.054394</td>\n",
+       "      <td>-0.762913</td>\n",
+       "      <td>-0.143613</td>\n",
+       "      <td>-0.328154</td>\n",
+       "      <td>-0.380083</td>\n",
+       "      <td>-1.128442</td>\n",
+       "      <td>1.001008</td>\n",
+       "      <td>0.498544</td>\n",
+       "      <td>-0.368707</td>\n",
+       "      <td>0.743062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.136323</td>\n",
-       "      <td>-0.342012</td>\n",
-       "      <td>-0.203393</td>\n",
-       "      <td>0.679367</td>\n",
-       "      <td>-0.072208</td>\n",
-       "      <td>0.576346</td>\n",
-       "      <td>1.321501</td>\n",
-       "      <td>0.549285</td>\n",
-       "      <td>-0.382767</td>\n",
-       "      <td>0.075622</td>\n",
-       "      <td>-0.218555</td>\n",
-       "      <td>-0.346983</td>\n",
-       "      <td>0.309274</td>\n",
-       "      <td>-0.335234</td>\n",
-       "      <td>-0.661385</td>\n",
-       "      <td>0.696024</td>\n",
+       "      <td>-0.926988</td>\n",
+       "      <td>-0.104570</td>\n",
+       "      <td>0.664905</td>\n",
+       "      <td>0.264477</td>\n",
+       "      <td>1.109110</td>\n",
+       "      <td>0.617614</td>\n",
+       "      <td>-0.048608</td>\n",
+       "      <td>-0.807432</td>\n",
+       "      <td>-0.150094</td>\n",
+       "      <td>-0.314221</td>\n",
+       "      <td>-0.404238</td>\n",
+       "      <td>-1.130124</td>\n",
+       "      <td>0.937440</td>\n",
+       "      <td>0.488027</td>\n",
+       "      <td>-0.309991</td>\n",
+       "      <td>0.691492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.071042</td>\n",
-       "      <td>-0.024264</td>\n",
-       "      <td>0.374454</td>\n",
-       "      <td>0.676078</td>\n",
-       "      <td>0.132810</td>\n",
-       "      <td>0.264118</td>\n",
-       "      <td>1.281350</td>\n",
-       "      <td>0.693255</td>\n",
-       "      <td>-0.042121</td>\n",
-       "      <td>0.912933</td>\n",
-       "      <td>0.303049</td>\n",
-       "      <td>-0.381561</td>\n",
-       "      <td>-0.430063</td>\n",
-       "      <td>-0.631585</td>\n",
-       "      <td>-0.392021</td>\n",
-       "      <td>0.633346</td>\n",
+       "      <td>-0.780072</td>\n",
+       "      <td>-0.260421</td>\n",
+       "      <td>0.672069</td>\n",
+       "      <td>0.253161</td>\n",
+       "      <td>1.051173</td>\n",
+       "      <td>0.685588</td>\n",
+       "      <td>-0.089009</td>\n",
+       "      <td>-0.754997</td>\n",
+       "      <td>-0.209139</td>\n",
+       "      <td>-0.311743</td>\n",
+       "      <td>-0.292209</td>\n",
+       "      <td>-1.033492</td>\n",
+       "      <td>0.953190</td>\n",
+       "      <td>0.570085</td>\n",
+       "      <td>-0.399655</td>\n",
+       "      <td>0.817219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.161672</td>\n",
-       "      <td>-0.338293</td>\n",
-       "      <td>-0.258853</td>\n",
-       "      <td>0.834578</td>\n",
-       "      <td>-0.090691</td>\n",
-       "      <td>0.538172</td>\n",
-       "      <td>1.258410</td>\n",
-       "      <td>0.596693</td>\n",
-       "      <td>-0.534008</td>\n",
-       "      <td>0.191207</td>\n",
-       "      <td>-0.226571</td>\n",
-       "      <td>-0.304185</td>\n",
-       "      <td>0.358930</td>\n",
-       "      <td>-0.472012</td>\n",
-       "      <td>-0.726286</td>\n",
-       "      <td>0.616967</td>\n",
+       "      <td>-0.912576</td>\n",
+       "      <td>-0.186411</td>\n",
+       "      <td>0.681746</td>\n",
+       "      <td>0.168253</td>\n",
+       "      <td>1.044887</td>\n",
+       "      <td>0.617192</td>\n",
+       "      <td>0.084998</td>\n",
+       "      <td>-0.852501</td>\n",
+       "      <td>-0.145857</td>\n",
+       "      <td>-0.282448</td>\n",
+       "      <td>-0.437965</td>\n",
+       "      <td>-1.112469</td>\n",
+       "      <td>0.985778</td>\n",
+       "      <td>0.519955</td>\n",
+       "      <td>-0.390988</td>\n",
+       "      <td>0.657512</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -502,34 +484,77 @@
       ],
       "text/plain": [
        "         0         1         2         3         4         5         6   \\\n",
-       "0 -0.207463  0.062599  0.316774  0.759136  0.531327  0.218926  1.292739   \n",
-       "1  0.183530 -0.303806 -0.191326  0.695051  0.004614  0.516913  1.419496   \n",
-       "2  0.136323 -0.342012 -0.203393  0.679367 -0.072208  0.576346  1.321501   \n",
-       "3 -0.071042 -0.024264  0.374454  0.676078  0.132810  0.264118  1.281350   \n",
-       "4  0.161672 -0.338293 -0.258853  0.834578 -0.090691  0.538172  1.258410   \n",
+       "0 -0.838726 -0.235961  0.678999  0.272436  1.040902  0.545415 -0.076529   \n",
+       "1 -0.854508 -0.151853  0.553616  0.195111  1.057672  0.700733 -0.054394   \n",
+       "2 -0.926988 -0.104570  0.664905  0.264477  1.109110  0.617614 -0.048608   \n",
+       "3 -0.780072 -0.260421  0.672069  0.253161  1.051173  0.685588 -0.089009   \n",
+       "4 -0.912576 -0.186411  0.681746  0.168253  1.044887  0.617192  0.084998   \n",
        "\n",
        "         7         8         9         10        11        12        13  \\\n",
-       "0  0.829721  0.227742  0.811851  0.184792 -0.461864 -0.256434 -0.607792   \n",
-       "1  0.712160 -0.516897 -0.066074 -0.123888 -0.263573  0.205573 -0.329295   \n",
-       "2  0.549285 -0.382767  0.075622 -0.218555 -0.346983  0.309274 -0.335234   \n",
-       "3  0.693255 -0.042121  0.912933  0.303049 -0.381561 -0.430063 -0.631585   \n",
-       "4  0.596693 -0.534008  0.191207 -0.226571 -0.304185  0.358930 -0.472012   \n",
+       "0 -0.823694 -0.180377 -0.419546 -0.378560 -1.136071  0.917937  0.525844   \n",
+       "1 -0.762913 -0.143613 -0.328154 -0.380083 -1.128442  1.001008  0.498544   \n",
+       "2 -0.807432 -0.150094 -0.314221 -0.404238 -1.130124  0.937440  0.488027   \n",
+       "3 -0.754997 -0.209139 -0.311743 -0.292209 -1.033492  0.953190  0.570085   \n",
+       "4 -0.852501 -0.145857 -0.282448 -0.437965 -1.112469  0.985778  0.519955   \n",
        "\n",
        "         14        15  \n",
-       "0 -0.297039  0.720587  \n",
-       "1 -0.679910  0.548596  \n",
-       "2 -0.661385  0.696024  \n",
-       "3 -0.392021  0.633346  \n",
-       "4 -0.726286  0.616967  "
+       "0 -0.399737  0.757854  \n",
+       "1 -0.368707  0.743062  \n",
+       "2 -0.309991  0.691492  \n",
+       "3 -0.399655  0.817219  \n",
+       "4 -0.390988  0.657512  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "emb_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5fbe5920-52f9-4895-8b92-02a6a90590aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emb_df = emb_df.merge(\n",
+    "    research_df[['article_id', 'main_topic']].set_index('article_id'),\n",
+    "    left_index = True,\n",
+    "    right_index = True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b0d694c8-c686-400c-ab63-67c35db1fc26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ft_cols = emb_df.drop(columns = ['main_topic']).columns.tolist()\n",
+    "target_col = 'main_topic'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cd314423-d2c0-4651-b543-952a461f00c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train test split\n",
+    "x = emb_df[ft_cols].values\n",
+    "y = emb_df[target_col].values\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, \n",
+    "    y,\n",
+    "    test_size = 0.2\n",
+    ")"
    ]
   },
   {
@@ -543,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56c64f40-2fdd-433a-bee3-0e72720b5b8d",
+   "id": "c6604426-599b-4775-9a02-67f42e5cb736",
    "metadata": {},
    "outputs": [],
    "source": []
