completed classification pipeline

--- a/node_classification/classify_node.ipynb
+++ b/node_classification/classify_node.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "cd314423-d2c0-4651-b543-952a461f00c0",
    "metadata": {},
    "outputs": [],
@@ -553,7 +553,7 @@
     "x_train, x_test, y_train, y_test = train_test_split(\n",
     "    x, \n",
     "    y,\n",
-    "    test_size = 0.2\n",
+    "    test_size = 0.3\n",
     ")"
    ]
   },
@@ -567,19 +567,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "c6604426-599b-4775-9a02-67f42e5cb736",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eaf9dccd-5ab6-4493-ad33-27cedeca77f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14.3 s, sys: 65.8 ms, total: 14.3 s\n",
+      "Wall time: 14.5 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingClassifier()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# GBC classifier\n",
+    "clf = GradientBoostingClassifier()\n",
+    "\n",
+    "# train the model\n",
+    "clf.fit(x_train, y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -591,19 +609,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "dd61cfc3-0d7c-489a-82d0-dc9a38ce155d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_pred = clf.predict(x_test)\n",
+    "y_true = y_test"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d5d8343-485f-4ba0-a066-81c9948e9afd",
+   "execution_count": 38,
+   "id": "564c02cf-23d7-46a7-bbd1-e5414557b809",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Accuracy :  0.8350515463917526\n",
+      "Training Accuracy :  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = clf.predict(x_test)\n",
+    "x_pred = clf.predict(x_train)\n",
+    "test_acc = accuracy_score(y_test, y_pred)\n",
+    "train_acc = accuracy_score(y_train, x_pred)\n",
+    "print(\"Testing Accuracy : \", test_acc)\n",
+    "print(\"Training Accuracy : \", train_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "6ddcdf08-46f4-4555-a6f8-b6f7ee3e1031",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCC Score :  0.8222440064195689\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MCC Score : \", matthews_corrcoef(y_true, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "59c22e62-f7b4-40b0-b2db-822d1e6b5d29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Classification Report : \n",
+      "                   precision    recall  f1-score   support\n",
+      "\n",
+      "      astro-ph.CO       1.00      1.00      1.00         2\n",
+      "      astro-ph.EP       1.00      1.00      1.00         3\n",
+      "      astro-ph.GA       1.00      1.00      1.00         1\n",
+      "      astro-ph.HE       0.00      0.00      0.00         1\n",
+      "      astro-ph.IM       0.00      0.00      0.00         0\n",
+      "      astro-ph.SR       0.00      0.00      0.00         2\n",
+      "  cond-mat.dis-nn       1.00      1.00      1.00         1\n",
+      "cond-mat.mes-hall       0.00      0.00      0.00         2\n",
+      "cond-mat.mtrl-sci       1.00      1.00      1.00         1\n",
+      "    cond-mat.soft       0.00      0.00      0.00         0\n",
+      "  cond-mat.str-el       0.00      0.00      0.00         0\n",
+      "cond-mat.supr-con       0.00      0.00      0.00         2\n",
+      "            cs.AI       1.00      1.00      1.00         3\n",
+      "            cs.CE       1.00      1.00      1.00         2\n",
+      "            cs.CG       0.00      0.00      0.00         1\n",
+      "            cs.CL       1.00      1.00      1.00        21\n",
+      "            cs.CR       0.75      1.00      0.86         3\n",
+      "            cs.CV       0.86      1.00      0.92        12\n",
+      "            cs.DM       1.00      1.00      1.00         1\n",
+      "            cs.DS       1.00      1.00      1.00         1\n",
+      "            cs.HC       1.00      1.00      1.00         1\n",
+      "            cs.IR       1.00      1.00      1.00         2\n",
+      "            cs.IT       1.00      1.00      1.00         2\n",
+      "            cs.LG       0.82      1.00      0.90        42\n",
+      "            cs.LO       0.00      0.00      0.00         1\n",
+      "            cs.NI       1.00      1.00      1.00         2\n",
+      "            cs.PL       0.00      0.00      0.00         2\n",
+      "            cs.RO       1.00      1.00      1.00         6\n",
+      "            cs.SD       0.00      0.00      0.00         0\n",
+      "            cs.SE       1.00      1.00      1.00         3\n",
+      "            cs.SI       1.00      1.00      1.00         2\n",
+      "          econ.GN       0.00      0.00      0.00         1\n",
+      "          eess.AS       0.00      0.00      0.00         2\n",
+      "          eess.IV       0.80      1.00      0.89         4\n",
+      "          eess.SY       1.00      1.00      1.00         3\n",
+      "           hep-ph       1.00      0.86      0.92         7\n",
+      "           hep-th       1.00      1.00      1.00         3\n",
+      "          math-ph       0.90      1.00      0.95         9\n",
+      "          math.AP       1.00      1.00      1.00         2\n",
+      "          math.AT       1.00      1.00      1.00         3\n",
+      "          math.CA       0.00      0.00      0.00         0\n",
+      "          math.CO       0.50      1.00      0.67         3\n",
+      "          math.FA       0.00      0.00      0.00         1\n",
+      "          math.HO       0.00      0.00      0.00         1\n",
+      "          math.NA       1.00      1.00      1.00         2\n",
+      "          math.OC       0.00      0.00      0.00         3\n",
+      "          math.PR       1.00      1.00      1.00         1\n",
+      "          math.ST       1.00      1.00      1.00         1\n",
+      "          nlin.AO       1.00      0.33      0.50         3\n",
+      "          nlin.SI       0.00      0.00      0.00         1\n",
+      "          nucl-th       1.00      0.50      0.67         2\n",
+      "   physics.bio-ph       0.00      0.00      0.00         1\n",
+      "  physics.comp-ph       0.00      0.00      0.00         1\n",
+      "  physics.ins-det       0.00      0.00      0.00         2\n",
+      "   physics.med-ph       1.00      1.00      1.00         1\n",
+      "   physics.optics       1.00      0.33      0.50         3\n",
+      " physics.plasm-ph       0.00      0.00      0.00         2\n",
+      "   physics.soc-ph       0.50      1.00      0.67         1\n",
+      "         q-bio.CB       0.00      0.00      0.00         0\n",
+      "         q-fin.MF       0.00      0.00      0.00         0\n",
+      "         quant-ph       1.00      1.00      1.00         5\n",
+      "          stat.AP       1.00      1.00      1.00         2\n",
+      "          stat.ME       0.67      1.00      0.80         2\n",
+      "\n",
+      "         accuracy                           0.84       194\n",
+      "        macro avg       0.58      0.59      0.58       194\n",
+      "     weighted avg       0.79      0.84      0.80       194\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vatsalpatel/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/vatsalpatel/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/vatsalpatel/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/vatsalpatel/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/vatsalpatel/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/vatsalpatel/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Test Classification Report : \")\n",
+    "print(classification_report(y_test, clf.predict(x_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6c700214-ddbc-47a2-8bf0-1fc491a3a351",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 0 0 ... 0 0 0]\n",
+      " [0 3 0 ... 0 0 0]\n",
+      " [0 0 1 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 5 0 0]\n",
+      " [0 0 0 ... 0 2 0]\n",
+      " [0 0 0 ... 0 0 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_pred,y_test))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -615,19 +801,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "d2ccbad5-9504-48f1-a780-7c2ec6a7b5b9",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f51f3ad-a7e3-4e32-9a96-a5b4c6338e43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cs.LG'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_ft = [mdl.wv.get_vector(str('21'))]\n",
+    "clf.predict(pred_ft)[0]"
+   ]
   },
   {
    "cell_type": "markdown",
